Add SMTP and database configuration files

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,3 +3,12 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=your_password_here
 DB_NAME=property_db
+
+# SMTP Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password_here
+FROM_EMAIL=your_email@gmail.com
+TO_EMAIL=your_email@gmail.com
+TO_EMAIL_2=another_email@example.com
